--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,31 +1,104 @@
 ---
-import astroLogo from '../assets/astro.svg';
 import background from '../assets/fantastica-tlo-gradient.svg';
 import falanding from '../assets/head-z-purple-kolem.png';
 import vidoo from '../assets/fantastica-vid.mp4';
+import kimjestesmyPhoto from '../assets/kimjestesmy-photo.png'
+import Wydarzenia from '../components/Wydarzenia.astro'
+import kalendarzPicMain from '../assets/kalendarz-pic-main.png'
+import secondPhotoMain from '../assets/second-photo-main.png'
+import Footer from '../components/Footer.astro'
+// import first_photo from '../assets/first_photo_main.png' TODO - nie dziala, wiec zrobilem straitght link
 ---
 
-	<div id="fantastica-landing">
-		<div id="landing-page">
-			<img class="background" id="fadeImage" src={background.src} alt="" fetchpriority="high" />
-			<img class="falanding" id="fadeImage" src={falanding.src} alt="" fetchpriority="high" />
-			<video id="fantastica-bg-vid" autoplay muted loop>
-				<source src={vidoo} type="video/mp4">
-			</video>
-		</div>
-		<h1 id="fbl" class="fantastica-big-letters" >
-			FANTASTICA
-		</h1>
+<div id="fantastica-glowna">
+	<div>
+		<img class="background" id="fadeImage" src={background.src} alt="" fetchpriority="high" />
+		<img class="falanding" id="fadeImage" class="widFantastica" src={falanding.src} alt="" fetchpriority="high" />
+		<video id="fantastica-bg-vid" autoplay muted loop>
+			<source src={vidoo} type="video/mp4">
+		</video>
 	</div>
+	<h1 id="fbl" class="fantastica-big-letters" >
+		FANTASTICA
+	</h1>
+	<div id="main-readable-portion">
+		<div id="o-nas-containter">
+			<div id="o-nas">
+				<div id="o-nas-left">
+					<h2>KIM<br>JESTEŚMY?</h2>
+					<img src={kimjestesmyPhoto.src} alt="" />
+				</div>
+				<div id="o-nas-right">
+					<div id="o-nas-right-tekscik">
+						<p>Fantastica Ensemble to przestrzeń, w której barok spotyka się z niepowtarzalną ekspresją i
+							nowatorskim podejściem. Jesteśmy zespołem o zmiennym składzie, a naszym trzonem są
+							skrzypaczka Aleksandra Owczarek i klawesynistka Klaudia Łoboda – artystki, które
+							odważnie sięgają po rzadkie i zapomniane dzieła, nadając im nowe życie. Nie odtwarzamy baroku – my go tworzymy na nowo.
+						</p>
+						<p>
+							Fantastica Ensemble to nie tylko zespół – to artystyczna misja. Gramy
+							muzykę, która nie zna granic, odrzuca schematy i na nowo definiuje czym właściwie jest muzyka
+							dawna. Autentyczność, ekspresja, nieprzewidywalność – to nasze DNA. W naszych interpretacjach
+							można usłyszeć wszystko, co w sztuce kochamy najbardziej: intensywność, zmysłowość i piękno.
+							
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="o-nas-containter-bg">
+			<!-- TODO - to wychodzace poza x axis -->
+			
+		</div>
+		<div id="first-photo-containter" >
+			<div id="first-photo-text-container">
+				<p>
+					„Barok odkryty na nowo.<br> Usłysz głos młodego pokolenia. ”
+				</p>
+			</div>
+		</div>
+		<div id="kalendarz-container">
+			<div>
+				<!-- TODO - make gradient move i linki i na szerokosc zrobic max bo wyglada goofy w safari-->
+				<h2>
+					KALENDARZ
+				</h2>
+				<div class="wydarzenia">
+					<Wydarzenia title="Wydarzenia" />
+					<img src={kalendarzPicMain.src} alt="" />
+				</div>
+			</div>
+		</div>
+		<div id="second-quote-main">
+			<img src={secondPhotoMain.src} alt="" />
+			<div>
+				<h2>“Rewolucjonizują świat muzyki barokowej swoim nowatorskim podejściem”</h2>
+				<h4>Autorzy<br>Karolina Sajniak-Drzyzga, Julian Cochran Foundation</h4>
+				<a>“Ich autorskie projekty to prawdziwe perełki, które z wirtuozerią łączą świeżość i innowacyjność, przybliżając piękno baroku w sposób zaskakujący i pełen młodzieńczej energii. Każdy ich koncert to nie tylko występ muzyczny, ale przemyślana, teatralna opowieść w której tradycja spotyka się z nowoczesności.”</a>
+			</div>
+		</div>
+		<!-- TODO - footer -->
+		<div id="footerson">
+			<Footer />
+		</div>
+
+		</div>
+	</div>
+</div>
 
 
-	<style>
-
-		#fantastica-landing {
+<style>
+		/* to nie dziala */
+header {
+	background: white;
+}
+	/* landing and vid */
+		#fantastica-glowna {
 			display: grid;
-			height: 200vh;
 			width: 100vw;
 			place-items: center;
+			grid-template-rows: 122vh 52% 100vh 1fr;
+
 		}
 
 		.background {
@@ -40,6 +113,8 @@ import vidoo from '../assets/fantastica-vid.mp4';
 
 		#fantastica-bg-vid {
 			position: fixed;
+			object-fit: cover;
+			width: 100%;
 			top: 0;
 			left: 50%;
 			transform: translateX(-50%);
@@ -55,15 +130,11 @@ import vidoo from '../assets/fantastica-vid.mp4';
 			bottom: 0;
 			pointer-events: none;
 		}
-		@keyframes rotate {
-			to {
-				transform: rotate(360deg);
-			}
-		}
 
 		.fantastica-big-letters {
 			position: sticky;
-			top: 45%;
+			top: 39%;
+			margin-bottom: calc(5vw + 140px);
 			grid-row-start: 1;
 			color: #E2E4E7;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -75,119 +146,333 @@ import vidoo from '../assets/fantastica-vid.mp4';
             pointer-events: none;
 			align-self: end;
             justify-self: center;
-			z-index: 0;
-			margin-bottom: 29vh;
+			z-index: 1;
 		}
 		.fntc-b-l {
 			height: 100%;
 		}
 
-		#fantastica-landing {
+		#fantastica-glowna {
 			font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 		}
 
-
-		#hero {
-			display: flex;
-			align-items: start;
-			flex-direction: column;
-			justify-content: center;
-			padding: 16px;
+		/* Element pod wideo, czytalny */
+		#main-readable-portion {
+			display: grid;
+			grid-template-columns: 1fr 82vw 2fr;
+			grid-template-rows: 10vh 1250px 82vh 108vh 1fr 1fr;
+			width: 100%;
+			height: 2000px;
+			background-color: white;
+			grid-row-start: 2;
+			
 		}
-
-		h1 {
-			font-size: 22px;
-			margin-top: 0.25em;
+		
+		#o-nas-containter {
+			grid-column: 2 / 4;
+			grid-row-start: 2;
+			z-index: 1;
 		}
-
-		#links {
-			display: flex;
-			gap: 16px;
-		}
-
-		#links a {
-			display: flex;
-			align-items: center;
-			padding: 10px 12px;
-			color: #111827;
-			text-decoration: none;
-			transition: color 0.2s;
-		}
-
-		#links a:hover {
-			color: rgb(78, 80, 86);
-		}
-
-		#links a svg {
-			height: 1em;
-			margin-left: 8px;
-		}
-
-		#links a.button {
-			color: white;
-			background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
-			box-shadow:
-				inset 0 0 0 1px rgba(255, 255, 255, 0.12),
-				inset 0 -2px 0 rgba(0, 0, 0, 0.24);
-			border-radius: 10px;
-		}
-
-		#links a.button:hover {
-			color: rgb(230, 230, 230);
-			box-shadow: none;
-		}
-
-
-
-		.image-bottom {
-			position: fixed;
+		
+		#o-nas-containter-bg {
+			height: 40%;
+			grid-column: 1/4;
+			grid-row: 2/3;
 			bottom: 0;
-			left: 50%;
-			transform: translateX(-50%);
-			width: 100%; /* Adjust as needed */
-			max-width: 500px; /* Example max width */
-	}
-
-		#news:hover {
-			background: rgba(255, 255, 255, 0.55);
+			align-self: flex-end;
+			z-index: 0;
+			background: linear-gradient(0deg, #E16F9E 21.65%, rgba(255, 255, 255, 0.00) 101.13%);
 		}
 
-		@media screen and (max-height: 368px) {
-			#news {
-				display: none;
-			}
+		#o-nas {
+			display: grid;
+			grid-template-columns: 1fr 1fr;	
+			gap: 100px;
+			height: 970px;
 		}
 
-		@media screen and (max-width: 768px) {
-
-
-			#hero {
-				display: block;
-				padding-top: 10%;
-			}
-
-			#links {
-				flex-wrap: wrap;
-			}
-
-			#links a.button {
-				padding: 14px 18px;
-			}
-
-			#news {
-				right: 16px;
-				left: 16px;
-				bottom: 2.5rem;
-				max-width: 100%;
-			}
-
-			h1 {
-				line-height: 1.5;
-			}
+		#o-nas-left {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			height: 1020px;
 		}
-		@media screen and (min-width: 1920px) {
+		#o-nas-left h2 {
+			color: #262626;
+			font-family: Elsie;
+			font-size: 3.8rem;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			align-self: center;
+			padding-right: 25px;
+		}
+
+		#o-nas-left img {
+			width: calc(23vw + 280px);
+			align-self: flex-end;
+		}
+
+		#o-nas-right {
+			margin-bottom: 25vh;
+			align-self: center;
+		}
+
+		#o-nas-right-tekscik {
+			color: #343232;
+			text-align: justify;
+			font-family: "Gilda Display";
+			font-size: calc(0.6vw + 11.5px);
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			margin-right: calc(33vw - 340px);
+		}
+
+		#first-photo-containter {
+			display: flex;
+			justify-content: center;
+			grid-column: 1/4;
+			grid-row-start: 3;
+			background-image: url('../assets/first_photo_main.png'); /* Set the background image */
+			background-size: cover; /* Cover the whole div */
+		}
+			#first-photo-text-container {
+				width: 94vw;
+				height: 71vh;
+				border-radius: 11px;
+				border: 1px solid rgba(220, 220, 220, 0.78);
+				margin-top: 6vh;
+			}
+
+				#first-photo-text-container > p {
+					color: #FFF;
+					font-family: "Gilda Display";
+					font-size: 3.2rem;
+					font-style: normal;
+					font-weight: 400;
+					line-height: normal;
+					padding: 0 3vw;
+				}
+		#kalendarz-container {
+			display: flex;
+			justify-content: center;
+			grid-row: 4/5;
+			grid-column: 1/4;
+			background-color: white;
+		}
+
+		#kalendarz-container > div {
+			align-self: center;
+			height: 70%;
+			width: 90%;
+			padding: 0 5.5vw;
+			padding-bottom: 17vh;
+		}
+
+		#kalendarz-container > div > h2 {
+			color: #262626;
+			font-family: Elsie;
+			font-size: 8vh;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			padding-left: 3.5%;
+		}
+
+
+		.wydarzenia {
+			display: flex;
+			justify-content: space-between;
+			flex-direction: row;
+			height: 600px;
+		}
+
+		.wydarzenia > img {
+			height: 30vw;
+		}
+
+		/* Drugi quote sekcja */
+		#second-quote-main {
+			display: flex;
+			flex-direction: row;
+			grid-row: 5/6;
+			grid-column: 1/4;
+			height: 56vw;
+		}
+		#second-quote-main > img{
+			height: 56vw;
+		}
+		#second-quote-main > div {
+			display: flex;
+			flex-direction: column;
+			padding: 1vw 1vw 5vw 4vw;
+			background-color: #D9EDFF;
+			background-image: url('../assets/quote-second-gdnt.svg');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+
+
+		#second-quote-main > div > h2 {
+			color: #032D52;
+			text-align: right;
+			font-family: "Gilda Display";
+			font-size: 5.3vh;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+		}
+		#second-quote-main > div > h4 {
+			color: #032D52;
+			font-family: "Gilda Display";
+			font-size: calc(0.6vw + 10px);
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			text-align: right;
+		}
+		#second-quote-main > div > a {
+			color: #032D52;
+			font-family: "Gilda Display";
+			font-size: calc(0.6vw + 10px);
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			margin-top: auto;
+			padding-right: 4vw;
+		}
+
+		#footerson {
+			height: 100%;
+			grid-row: 8/9;
+			grid-column: 1/4;
+		}
+
+		/* Naprawa animacji glownego napisu */
+
+/* responsive */
+		@media screen and (max-width: 1000px) {
+			#fantastica-glowna {
+				grid-template-rows: 114vh 72% 100vh 1fr;
+			}
+			.falanding {
+				height: 116vw;
+				left: 46vw;
+			}
+			#main-readable-portion {
+				width: 101vw;
+				grid-template-rows: 10vh 1250px 82vh 108vh 175vw 42vh;
+			}
+  /* O nas Iphone */
+			#o-nas-containter {
+				grid-column: 1/4;
+			}
+
+			#o-nas {
+				position: relative; 
+				grid-template-columns: 1fr;
+				grid-template-rows: 1fr 1fr;
+			}
+			#o-nas-left {
+				grid-row: 1/2;height: 264vw;
+			}
+			#o-nas-left img {
+				width: 95%;
+				align-self: anchor-center;
+			}
+			#o-nas-right {
+				width: 91vw;
+				position: absolute;
+				top: 29vh;
+				justify-self: anchor-center;
+			}
+			#o-nas-right-tekscik {
+				width: 91vw;
+				font-size: calc(1.6vw + 11.5px);
+			}
+		/* First photo iphone */
+			#first-photo-containter {
+				background-position: center;
+			}
+
+		/* kalendarz iphone */
+			.wydarzenia {
+				row-gap: 15vw;
+			}
+			#kalendarz-container > div > h2 {
+				padding: 0;
+				font-size: 7vh;
+			}
+
+
+			/* Second quote iphone */
+			#second-quote-main {
+				grid-row: 7 / 8;
+				flex-direction: column-reverse;
+				/* grid-template-columns: 1fr;
+				grid-template-rows: 1fr 1fr; */
+			}
+			#second-quote-main > img {
+				height: 114vw;
+			}
+			/* #second-quote-main > div {
+				grid-row: 2/3;
+			} */
+			.wydarzenia {
+				flex-direction: column;
+			}
+			.wydarzenia > img {
+				height: 114vw;
+			}
+
 
 		}
+	/* Iphone */
+		@media screen and (max-width: 600px) {
+			#fantastica-glowna {
+				grid-template-rows: 114vh 65% 100vh 1fr 1fr;
+			}
+			.fantastica-big-letters {
+				align-self: start;
+				top: 23%;
+			}
+			#fbl {
+				font-size: 12.5vw;
+				/* align-items: start; */
+			}
+			.falanding {
+				
+				/* left: auto;
+				top: 21vh; */
+			}
+
+		}
+			@media screen and (max-width: 420px) {
+				#fantastica-glowna {
+					grid-template-rows: 114vh 66.7% 100vh 1fr;
+
+				}
+			}
+			@media screen and (max-width: 400px) {
+				#fantastica-glowna {
+					grid-template-rows: 114vh 68.4% 100vh 1fr;
+
+				}
+			}
+			@media screen and (max-width: 385px) {
+				#fantastica-glowna {
+					grid-template-rows: 114vh 75.1% 100vh 1fr;
+
+				}
+			}
+			@media screen and (max-width: 350px) {
+				#fantastica-glowna {
+					grid-template-rows: 114vh 67.1% 100vh 1fr;
+
+				}
+			}
 
 	</style>
 
@@ -197,32 +482,186 @@ import vidoo from '../assets/fantastica-vid.mp4';
 
 		import gsap from "gsap";
 		import ScrollTrigger from "gsap/ScrollTrigger";
-		document.addEventListener("DOMContentLoaded", (event) => {
+		let mm = gsap.matchMedia();
+
+			const readableTimeline = gsap.timeline();
 			gsap.registerPlugin(ScrollTrigger);
 
 			let tl = gsap.timeline({
 				scrollTrigger: {
-				trigger: "#fadeImage",
-				start: "top",  
-				end: "bottom 200vh",    
-				scrub: true,    
-			}
+					trigger: "#fadeImage",
+					scrub: true,
+					start: "top top",    
+					end: "center-=180 top",
+				}
 			});
 			
 			
 			// First animation: Fade out #fadeImage
 			tl.to("#fadeImage", {
 				opacity: 0,
+				filter: "grayscale(100%)",
 				duration: 3,
 			}, );
-			
-			// Second animation: Change color of #fbl after #fadeImage is done
-			tl.to("#fbl", {
-				color: "purple",
-				scale: "1.3vw 1.3vh",
-				y: -275,
-				duration: 5
+
+			mm.add("(min-width: 800px)", () => {
+
+				// // Second animation: Change color of #fbl after #fadeImage is done
+				tl.to("#fbl", {
+					color: "#A76AFB",
+					scale: "1.4vw 1.4vh",
+					scrub: true,
+					y: "-16vh",	
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top+=200px center",     
+						scrub: true
+					}
+				})				
+				// tl.to("#headinio", {
+				// 	filter: "invert(1)",
+				// 	scrub: true,
+				// 	scrollTrigger: {
+				// 		trigger: "#fbl",
+				// 		start: "top+=200px center",     
+				// 		scrub: true
+				// 	}
+				// })
+				// tl.to("#headinio", {
+				// 	filter: "none",
+				// 	mixBlendMode: "difference",
+				// 	scrollTrigger: {
+				// 		trigger: "#fbl",
+				// 		start: "top+=300px center",     
+				// 		scrub: true
+				// 	}
+				// })
+				.to("#fantastica-bg-vid", {
+					filter: "grayscale(100%)",
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top center",     
+						scrub: true
+					}
+				}, )
+				tl.to("#fbl", {
+					marginBottom: "calc(1744px + 91vh)",
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top top",     
+						scrub: true,
+					}
+				});
+
+				gsap.to("#fantastica-bg-vid", {
+					opacity: 0,
+					scrollTrigger: {
+						trigger: "#first-photo-containter",
+						start: "top center",
+						scrub: true,
+						onEnter: () => {
+							const video = document.querySelector("#fantastica-bg-vid");
+							video.style.display = "none";
+							video.pause();
+						},
+						onLeaveBack: () => {
+							const video = document.querySelector("#fantastica-bg-vid");
+							video.style.display = "block";
+							video.play();
+						}
+					}
+				});
 			});
-			
-		});
+
+
+// TODO - header animation
+
+			mm.add("(max-width: 800px)", () => {
+
+				// // Second animation: Change color of #fbl after #fadeImage is done
+				tl.to("#fbl", {
+					color: "#A76AFB",
+					scale: "1.2vw 1.2vh",
+					scrub: true,
+					// y: "-6vh",	
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top+=200px center",     
+						scrub: true
+					}
+				})
+				// tl.to("#headinio", {
+				// 	filter: "invert(1)",
+				// 	scrub: true,
+				// 	scrollTrigger: {
+				// 		trigger: "#fbl",
+				// 		start: "top+=200px center",     
+				// 		scrub: true
+				// 	}
+				// })
+				// tl.to("#headinio", {
+				// 	filter: "none",
+				// 	mixBlendMode: "difference",
+				// 	scrollTrigger: {
+				// 		trigger: "#fbl",
+				// 		start: "top+=300px center",     
+				// 		scrub: true
+				// 	}
+				// })
+				.to("#fantastica-bg-vid", {
+					filter: "grayscale(100%)",
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top center",     
+						scrub: true
+					}
+				}, )
+				tl.to("#fbl", {
+					marginBottom: "calc(1744px + 91vh)",
+					scrollTrigger: {
+						trigger: "#fbl",
+						start: "top top",     
+						scrub: true,
+					}
+				});
+				tl.to("#fbl", {
+					opacity: 0,
+					scrollTrigger: {
+						trigger: "#main-readable-portion",
+						start: "top top",     
+					}
+				});
+				gsap.to("#fantastica-bg-vid", {
+					opacity: 0,
+					scrollTrigger: {
+						trigger: "#first-photo-containter",
+						start: "top center",
+						scrub: true,
+						onEnter: () => {
+							const video = document.querySelector("#fantastica-bg-vid");
+							video.style.display = "none";
+							video.pause();
+						},
+						onLeaveBack: () => {
+							const video = document.querySelector("#fantastica-bg-vid");
+							video.style.display = "block";
+							video.play();
+						}
+					}
+				});
+
+			});
+
+
+
+			// readableTimeline.to("#main-readable-portion", {
+			// 	margin: "-20.2% 0 0 0",
+			// 	scrollTrigger: {
+			// 		trigger: "#fadeImage",
+			// 		start: "center",     
+			// 		scrub: true
+			// 	}
+
+			// });
+
 	</script>
