ig-kontakt rename

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -1,7 +1,7 @@
 ---
 import kontaktImg from '../assets/kontakt.png';
 import fbIcon from '../assets/fb_icon.svg';
-import igIcon from '../assets/IgKontakt.svg';
+import igIcon from '../assets/ig-kontakt.svg';
 ---
 <div class="kontakt-container">
     <div class="heading-kontakt">
