--- a/src/components/Projekty_cmpnt.astro
+++ b/src/components/Projekty_cmpnt.astro
@@ -167,7 +167,7 @@ import projekt4img from '../assets/projekt4img.png';
     /* TODO - fajnie jakby sie udalo zrobic overflow clip */
     .projekty-container {
         display: grid;
-        grid-template-rows: 93vh 83vw 140vh 140vh 140vh;
+        grid-template-rows: 99vh 83vw 140vh 140vh 140vh;
         font-weight: 400;
         font-family: "Gilda Display";
 
@@ -179,6 +179,7 @@ import projekt4img from '../assets/projekt4img.png';
         grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
         grid-template-rows: 14vh 1fr;
         background-image: url("../assets/tloProjekty.png");
+        height: -webkit-fill-available;
     }
 
     .projektyHeadlineImg {
@@ -213,6 +214,7 @@ import projekt4img from '../assets/projekt4img.png';
     .projekt-1-container {
         display: grid;
         grid-template-rows: 4fr 1fr;
+        margin-top: -1vw;
         }
     
     .projekt-1-up {
@@ -364,6 +366,7 @@ import projekt4img from '../assets/projekt4img.png';
         background-color: #3098F3;
         align-content: center;
         display: flex;
+        margin-top: 0;
     }
 
     h2 {
@@ -398,7 +401,7 @@ import projekt4img from '../assets/projekt4img.png';
         align-content: center;
     }
     .projekt-2-down ul {
-        margin-top: 3vw;
+        margin-top: 0;
     }
 
     /* projekt 3 */
@@ -470,7 +473,7 @@ import projekt4img from '../assets/projekt4img.png';
         align-content: center;
     }
     .projekt-2-down ul {
-        margin-top: 3vw;
+        margin-top: 2vw;
     }
 
     /* projekt 4 */
