--- a/src/components/Albumy_cmpnt.astro
+++ b/src/components/Albumy_cmpnt.astro
@@ -302,7 +302,7 @@ import plytyBiber2 from '../assets/plytyBiber2.png'
             width: 100vw;
         }
         .albumy-container {
-            grid-template-rows: 93vh 1fr 60vw 1fr;
+            grid-template-rows: 0.8fr 0.6fr 60vw 1fr;
         }
         .albumy-headline {
             grid-template-rows: 1fr 1fr;
