NEWSLETTER + mini rzeczy

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -13,7 +13,7 @@ import igIcon from '../assets/ig-kontakt.svg';
         <div class="footer-social-icons-kontakt">
             <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
             <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><img class="footer-right-icon" src={fbIcon.src} alt="facebook" /> <span id="footer-right-text-fb">facebook</span></a>
-        </div>x
+        </div>
     </div>
     <img class="kontaktImg" src={kontaktImg.src} alt="" />
 
