--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -25,7 +25,7 @@ import Footer from '../components/Footer.astro'
 		<div id="o-nas-containter">
 			<div id="o-nas">
 				<div id="o-nas-left">
-					<h2>KIM<br>JESTEŚMY?</h2>
+					<h2 style="font-family: Gilda Display;">KIM<br>JESTEŚMY?</h2>
 					<img src={kimjestesmyPhoto.src} alt="" />
 				</div>
 				<div id="o-nas-right">
