--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,10 @@ import ytIcon from '../assets/yt_icon.svg';
     <div class="footer">
         <div class="footer-left">
             <h2>DOŁĄCZ DO NAS</h2>
-            <input type="email" placeholder="E-mail">
-            <button>ZAPISZ SIĘ</button>
+            <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
+                            <input type="email" name="email" placeholder="E-mail" required>
+            <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
+        </form>
         </div>
         <div class="footer-right">
             <h3>Kontakt</h3>
