Welcome mini fix

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -95,7 +95,7 @@ header {
 	/* landing and vid */
 		#fantastica-glowna {
 			display: grid;
-			width: 100vw;
+			width: -webkit-fill-available;
 			place-items: center;
 			grid-template-rows: 122vh 52% 100vh 1fr;
 
