Experimentalgit add .git add . Naprawa tabs i ikonki

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 ---
 import Logo from '../assets/logoo.svg';
 const links = [
-  { name: "O nas", href: "/about" },
+  { name: "O nas", href: "/o-nas" },
   { name: "Posłuchaj", href: "/posluchaj" },
   { name: "Projekty", href: "/projekty" },
-  { name: "Albumy", href: "/albumy" },
+  { name: "Płyty", href: "/plyty" },
   { name: "Kontakt", href: "/kontakt" }
 ];
 ---
