--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Glowna_cmpnt from '../components/Glowna_cmpnt.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<Glowna_cmpnt />
 </Layout>
