--- a/src/pages/plyty.astro
+++ b/src/pages/plyty.astro
@@ -1,10 +1,10 @@
 ---
-import AlbumyCmpnt from '../components/Albumy_cmpnt.astro';
+import Plyty_cmpnt from '../components/Plyty_cmpnt.astro';
 import Layout from '../layouts/Layout.astro';
 import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
-	<AlbumyCmpnt />
+	<Plyty_cmpnt />
 	<Footer />
 </Layout>
