--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -88,6 +88,9 @@ import Footer from '../components/Footer.astro'
 
 
 <style>
+	htnl {
+		scroll-behavior: auto;
+	}
 		/* to nie dziala */
 header {
 	background: white;
@@ -478,7 +481,10 @@ header {
 
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
-	<script>
+	<script>  
+		if ("scrollRestoration" in history) {
+			history.scrollRestoration = "manual";
+		}
 
 		import gsap from "gsap";
 		import ScrollTrigger from "gsap/ScrollTrigger";
