mini poprawki (mam nadzieje) responsywnosci w sekcji projekty

--- a/src/components/Projekty_cmpnt.astro
+++ b/src/components/Projekty_cmpnt.astro
@@ -573,6 +573,7 @@ import projekt4img from '../assets/projekt4img.png';
     }
     .projekty-headline {
         margin-top: 12vw;
+        height: -webkit-fit-content;
     }
 
     .projekty-headline-text {
@@ -621,18 +622,18 @@ import projekt4img from '../assets/projekt4img.png';
     }
     .projekt1-fikusy {
         left: -6vw;
-        top: -9.8vw;
+        top: -13vw;
     }
     .projekt2-fikusy {
         top: -44vw;
         left: 19.6vw;
     }
     .projekt22-fikusy {        
-        top: -93vw;
-        left: -6.4vw;       
+        top: calc(7vh - 27vw);
+        left: 36.6vw;
     }
     .projekt2img {
-        height: fit-content;
+        height: auto;
     }
     .projekt-2-text {
         grid-column: 1/2;
