--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -126,7 +126,7 @@ import igIcon from '../assets/ig-kontakt.svg';
             grid-column: 1/2;
             width: 93vw;
             height: 30vh;
-            justify-self: anchor-center;
+            justify-self: center;
             border-radius: 8px;
             
         }
