Nastepne usuniecie anchor center

--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -89,7 +89,7 @@ import plytyBiber2 from '../assets/plytyBiber2.png'
         grid-column: 2/3;
         grid-row:  2/3;
         justify-self: center;
-        align-self: anchor-center;
+        align-self: center;
         display: flex;
     }
     .albumyHeadlineImg {
@@ -158,7 +158,7 @@ import plytyBiber2 from '../assets/plytyBiber2.png'
         grid-column: 2/3;
         font-size: clamp(16px, 1.8vw, 30px);
         text-align: right;
-        align-self: anchor-center;
+        align-self: center;
     }
 
 
