--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+// TODO - WAZNE - to nie dziala na oficjalnym serwerze
 const pageTitles = {
   '/': 'Fantastica',
   '/o-nas': 'Fantastica | O nas',
