--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -95,6 +95,9 @@ import Footer from '../components/Footer.astro'
 header {
 	background: white;
 }
+	#kalendarz-container {
+		background: url(../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
+	}
 	/* landing and vid */
 		#fantastica-glowna {
 			display: grid;
