--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const currentPath = Astro.url.pathname;
 const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica';
 ---
 
+<!-- TODO - NAJZWAZNIEJSZE!!!! - dodac te linki z boku co chcialy, dodac sekcje posluchaj do glownej. wersja angielska -->
 <!doctype html>
 <html lang="pl">
 	<head>
