--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -169,7 +169,8 @@ header {
 			grid-template-rows: 10vh 1250px 82vh 108vh 1fr 1fr;
 			width: 100%;
 			height: 2000px;
-			background-color: white;
+			background-color: rgba(241, 239, 239, 0.97);
+			backdrop-filter: blur(15px);
 			grid-row-start: 2;
 			
 		}
