Glowna: usuniecie anchor center

--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -387,13 +387,13 @@ header {
 			}
 			#o-nas-left img {
 				width: 95%;
-				align-self: anchor-center;
+				align-self: center;
 			}
 			#o-nas-right {
 				width: 91vw;
 				position: absolute;
 				top: 29vh;
-				justify-self: anchor-center;
+				justify-self: center;
 			}
 			#o-nas-right-tekscik {
 				width: 91vw;
