--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -5,7 +5,7 @@ import igIcon from '../assets/ig-kontakt.svg';
 ---
 <div class="kontakt-container">
     <div class="heading-kontakt">
-        <h1>Chesz z nami współpracować?</h1>
+        <h1>Chcesz z nami współpracować?</h1>
     </div>
     <div class="kontakt">
         <h3>Kontakt</h3>
