--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -455,6 +455,11 @@ header {
 				top: 21vh; */
 			}
 
+/* TODO - wazne, na glownej za male literki w tym */
+			#second-quote-main > div > a, #second-quote-main > div > h4 {
+				/* font-size: 10vw; */
+			}
+
 		}
 			@media screen and (max-width: 420px) {
 				#fantastica-glowna {
