Literowka na zywo

--- a/src/components/Posluchaj_cmpnt.astro
+++ b/src/components/Posluchaj_cmpnt.astro
@@ -34,7 +34,7 @@ import Footer from '../components/Footer.astro';
     <div class="zobacz-na-zywo-container">
         <div class="zobacz-na-zywo">
             <p>
-                Zobacz nas na zywo:
+                Zobacz nas w akcji:
             </p>
         </div>
         <div class="zobacz-na-zywo-embed">
