Splaszczajace zdj w projektach

--- a/src/components/Projekty_cmpnt.astro
+++ b/src/components/Projekty_cmpnt.astro
@@ -545,6 +545,7 @@ import projekt4img from '../assets/projekt4img.png';
             grid-row: 2/3;    
             width: 93%;
             z-index: -1;
+            object-fit: contain;
         }
         .projekty-headline-text {
             margin-top: 6vw;
