--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -8,6 +8,13 @@ import igIcon from '../assets/ig-kontakt.svg';
         <h1>Chcesz z nami współpracować?</h1>
     </div>
     <div class="kontakt">
+        <div class="footer-left">
+            <h2>DOŁĄCZ DO NAS</h2>
+            <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
+                            <input type="email" name="email" placeholder="E-mail" required>
+            <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
+            </form>
+        </div>
         <h3>Kontakt</h3>
         <a id="emailson" href="mailto:owczareklobodaduo@gmail.com">owczareklobodaduo@gmail.com</a>
         <div class="footer-social-icons-kontakt">
@@ -16,10 +23,62 @@ import igIcon from '../assets/ig-kontakt.svg';
         </div>
     </div>
     <img class="kontaktImg" src={kontaktImg.src} alt="" />
-
 </div>
 
 <style>
+/* Newsletter */
+.footer-left {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}    
+
+.footer-left h2 {
+        margin-bottom: 16vh;
+        font-size: 38px;
+        font-weight: normal;
+        color: white;
+    margin-bottom: 0.7vh;
+    }
+.footer-left input {
+        background: transparent;
+        border: none;
+        border-bottom: 1px solid white;
+        color: white;
+        font-size: 16px;
+        padding: 19px;
+        width: calc(62vw - 355px);
+        outline: none;
+        width: -webkit-fill-available;
+    }
+
+    .footer-left button {
+        background: transparent;
+        font-family: "Gilda Display";
+        border: 1px solid #FFF;;
+        color: #FFF;
+        cursor: pointer;
+        margin-left: 20px;
+        padding: 18px 23px;
+        margin-left: 0;
+        float: right;
+        font-size: 15px;
+        border-radius: 17px;
+        width: 170px;
+        text-wrap: nowrap;
+    }
+    form {
+        display: flex;    
+        /* column-gap: 21px; */
+        justify-content: space-between;
+        column-gap: 15px;
+    }
+
+    input::placeholder {
+        color: white;
+    }
+
+/* Newsletter end */
     .kontakt-container {
         overflow: hidden;
         display: grid;
@@ -36,6 +95,7 @@ import igIcon from '../assets/ig-kontakt.svg';
     .kontakt {
         grid-row: 2/3;
         grid-column: 1/2;
+        padding-top: -8vh;
     }
     .kontaktImg {
         grid-row: 1/3;
@@ -96,9 +156,6 @@ import igIcon from '../assets/ig-kontakt.svg';
         padding-right: 2.7vw;
         margin-top: 4vh;
     }
-    .kontakt {
-        padding-top: 12vh;
-    }
 
     #footer-right-text-fb {
         padding-right: 12px;
@@ -110,7 +167,7 @@ import igIcon from '../assets/ig-kontakt.svg';
     @media screen and (max-width: 700px) 
     {
         .kontakt-container {
-            grid-template-rows: 77vw 0.9fr 1fr;
+            grid-template-rows: 39vh 0.9fr 1fr;
             grid-template-columns: 100vw;
             height: -webkit-fill-available;
             overflow: scroll;
@@ -122,20 +179,21 @@ import igIcon from '../assets/ig-kontakt.svg';
             margin-top: -3vh;
         }
         .kontaktImg {
-            grid-row: 2/3;
+            /* opacity: 0; */
+            /* grid-row: 2/3;
             grid-column: 1/2;
             width: 93vw;
             height: 30vh;
             justify-self: center;
-            border-radius: 8px;
+            border-radius: 8px; */
             
         }
         .kontakt {
-            grid-row: 3/4;
-            grid-column: 1/2;
-
             padding-top: 0%;
             margin-top: 0;
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+            align-content: center;
         }
         
     }
