Kontakt: mini naprawaw responsivity

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -170,7 +170,7 @@ import igIcon from '../assets/ig-kontakt.svg';
             grid-template-rows: 39vh 0.9fr 1fr;
             grid-template-columns: 100vw;
             height: -webkit-fill-available;
-            overflow: scroll;
+            overflow: clip;
         }
         .heading-kontakt {
             padding-top: 19vh;
