--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -355,8 +355,11 @@ header {
 			height: 100%;
 			grid-row: 8/9;
 			grid-column: 1/4;
+			width: 101.4vw;
 		}
-
+		#footerson > footer {
+			width: 101.6vw;
+		}
 		/* Naprawa animacji glownego napisu */
 
 /* responsive */
@@ -376,6 +379,7 @@ header {
 			#o-nas-containter {
 				grid-column: 1/4;
 			}
+
 
 			#o-nas {
 				position: relative; 
@@ -483,6 +487,46 @@ header {
 				#fantastica-glowna {
 					grid-template-rows: 114vh 67.1% 100vh 1fr;
 
+				}
+			}
+			@media screen and (max-height: 950px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 53% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 920px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 54.4% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 890px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 55% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 860px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 56% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 830px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 57.7% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 780px) {
+				#fantastica-glowna {
+					grid-template-rows: 122vh 59.3% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 750px) {
+				#fantastica-glowna {
+					grid-template-rows: 132vh 59.3% 100vh 1fr;
+				}
+			}
+			@media screen and (max-height: 710px) {
+				#fantastica-glowna {
+					grid-template-rows: 132vh 61.1% 100vh 1fr;
 				}
 			}
 
