Kontatk: naprawa respnsywnosci

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -178,6 +178,7 @@ import igIcon from '../assets/ig-kontakt.svg';
             grid-row: 1/2;
             grid-column: 1/2;
             margin-top: -3vh;
+            margin-bottom: 0;
         }
         .kontaktImg {
             /* opacity: 0; */
@@ -194,9 +195,24 @@ import igIcon from '../assets/ig-kontakt.svg';
             margin-top: 0;
             grid-row: 2 / 3;
             grid-column: 1 / 2;
-            align-content: center;
+            align-content: end;
+            padding-bottom: 10vh;
         }
-        
+        .footer-left {
+            justify-self: center;
+            width: 92vw;
+        }
+        .footer-left input {
+            width: auto;
+        }
+
+        h2 {
+            margin-top: 0;
+        }
+        .footer-social-icons-kontakt {
+            justify-self: center;
+            width: 92vw;
+        }
     }
 
     @media screen and (max-width: 400px) {
