Kontatk: mini fix buttona

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -202,10 +202,13 @@ import igIcon from '../assets/ig-kontakt.svg';
             justify-self: center;
             width: 92vw;
         }
+        form {
+            padding-right: 3vw;
+        }
         .footer-left input {
             width: auto;
         }
-
+        
         h2 {
             margin-top: 0;
         }
