Kontatk: mini fix button again..

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -203,7 +203,7 @@ import igIcon from '../assets/ig-kontakt.svg';
             width: 92vw;
         }
         form {
-            padding-right: 3vw;
+            padding-right: 27px;
         }
         .footer-left input {
             width: auto;
