--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -206,7 +206,7 @@ import igIcon from '../assets/ig-kontakt.svg';
             padding-right: 27px;
         }
         .footer-left input {
-            width: auto;
+            width: 36vw;
         }
         
         h2 {
