--- a/src/components/LangSwitchButton.astro
+++ b/src/components/LangSwitchButton.astro
@@ -12,7 +12,7 @@
 
 <style>
  section {
-    --col-orange: pink;
+    --col-pink: pink;
     --col-dark: #0c0f14;
     --col-darkGray: #52555a;
     --col-gray: #aeaeae;
@@ -21,7 +21,6 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    /* background-color: var(--col-dark); */
     border-radius: 25px;
     position: fixed;
     top: 4px;
