--- a/src/components/LangSwitchButton.astro
+++ b/src/components/LangSwitchButton.astro
@@ -41,7 +41,7 @@
   }
 
   .label:hover:not(:has(input:checked)) {
-    background: var(--col-orange);
+    background: var(--col-pink);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -57,12 +57,12 @@
     position: relative;
     left: 50%;
     top: 18px;
-    background: var(--col-orange);
+    background: var(--col-pink);
     transition: all 200ms;
   }
 
   .label:has(input:checked) {
-    background: var(--col-orange);
+    background: var(--col-pink);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
